--- a/rockn_roll/template/overall_header.html
+++ b/rockn_roll/template/overall_header.html
@@ -93,24 +93,8 @@
 <div id="wrap" class="wrap">
 	<a id="top" class="top-anchor" accesskey="t"></a>
 	<div id="page-header">
-	
-	<!-- Menu section - START -->
-		<div class="responsive-hide">
-			<div class="forumbg">
-					<div class="inner">
-						<div class="solidblockmenu">
-							<ul>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
-							</ul>
-						</div>
-					</div>
-			</div>
-		</div>
-	<!-- Menu section - END -->
+
+<!-- INCLUDE menu.html -->
 
 		<div class="headerbar" role="banner">
 		<!-- EVENT overall_header_headerbar_before -->
