--- a/rockn_roll/template/menu.html
+++ b/rockn_roll/template/menu.html
@@ -4,11 +4,11 @@
 					<div class="inner">
 						<div class="solidblockmenu">
 							<ul>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
-								<li><a href="#" title="Your link">Your Link</a></li>
+								<li><a href="#" title="Your title link">Your Link</a></li>
+								<li><a href="#" title="Your title link">Your Link</a></li>
+								<li><a href="#" title="Your title link">Your Link</a></li>
+								<li><a href="#" title="Your title link">Your Link</a></li>
+								<li><a href="#" title="Your title link">Your Link</a></li>
 							</ul>
 						</div>
 					</div>
