--- a/rockn_roll/template/index_body.html
+++ b/rockn_roll/template/index_body.html
@@ -36,9 +36,22 @@
 <!-- EVENT index_body_stat_blocks_before -->
 
 <!-- IF S_DISPLAY_ONLINE_LIST -->
-	<div class="stat-block online-list">
-		<!-- IF U_VIEWONLINE --><h3><a href="{U_VIEWONLINE}">{L_WHO_IS_ONLINE}</a></h3><!-- ELSE --><h3>{L_WHO_IS_ONLINE}</h3><!-- ENDIF -->
-		<p>
+<br />
+<div class="forabg">
+		<div class="inner">
+			<ul class="topiclist">
+				<li class="header">
+					<dl class="row-item">
+						<dt><div class="list-inner"><!-- IF U_VIEWONLINE --><a href="{U_VIEWONLINE}">{L_WHO_IS_ONLINE}</a><!-- ELSE -->{L_WHO_IS_ONLINE}<!-- ENDIF --></div></dt>
+					</dl>
+				</li>
+			</ul>
+			<ul class="topiclist forums"> 
+					<li class="row">
+				<dt title="{L_WHO_IS_ONLINE}">
+					<div class="list-inner2">
+						<dl class="row-item" style="background-image: url({T_THEME_PATH}/images/member.gif); background-repeat: no-repeat; padding-left: 50px;">
+			<p>
 			<!-- EVENT index_body_block_online_prepend -->
 			<i class="fa fa-sign-in"></i> {TOTAL_USERS_ONLINE} ({L_ONLINE_EXPLAIN})<br /><i class="fa fa-tachometer"></i> {RECORD_USERS}<br /> 
 			<!-- IF U_VIEWONLINE -->
@@ -46,32 +59,74 @@
 				<!-- IF LEGEND --><br /><em><i class="fa fa-star"></i> {L_LEGEND}{L_COLON} {LEGEND}</em><!-- ENDIF -->
 			<!-- ENDIF -->
 			<!-- EVENT index_body_block_online_append -->
-		</p>
-	</div>
+			</p>
+					</div>
+					</dl>
+				</dt>
+					</li>
+			</ul>
+		</div>
+</div>
 <!-- ENDIF -->
 
 <!-- EVENT index_body_birthday_block_before -->
 
 <!-- IF S_DISPLAY_BIRTHDAY_LIST -->
-	<div class="stat-block birthday-list">
-		<h3>{L_BIRTHDAYS}</h3>
+<div class="forabg">
+		<div class="inner">
+			<ul class="topiclist">
+				<li class="header">
+					<dl class="row-item">
+						<dt><div class="list-inner">{L_BIRTHDAYS}</div></dt>
+					</dl>
+				</li>
+			</ul>
+			<ul class="topiclist forums"> 
+					<li class="row">
+				<dt title="{L_CONGRATULATIONS}">
+					<div class="list-inner2">
+						<dl class="row-item" style="background-image: url({T_THEME_PATH}/images/birthday.gif); background-repeat: no-repeat; padding-left: 50px;">
 		<p>
 			<!-- EVENT index_body_block_birthday_prepend -->
 			<!-- IF .birthdays --><i class="fa fa-heart"></i> {L_CONGRATULATIONS}{L_COLON} <strong><!-- BEGIN birthdays -->{birthdays.USERNAME}<!-- IF birthdays.AGE !== '' --> ({birthdays.AGE})<!-- ENDIF --><!-- IF not birthdays.S_LAST_ROW -->, <!-- ENDIF --><!-- END birthdays --></strong><!-- ELSE -->{L_NO_BIRTHDAYS}<!-- ENDIF -->
 			<!-- EVENT index_body_block_birthday_append -->
 		</p>
-	</div>
+					</div>
+					</dl>
+				</dt>
+					</li>
+			</ul>
+		</div>
+</div>
 <!-- ENDIF -->
 
-<!-- IF NEWEST_USER -->		
-	<div class="stat-block statistics">
-		<h3>{L_STATISTICS}</h3>
+<!-- IF NEWEST_USER -->
+<div class="forabg">
+		<div class="inner">
+			<ul class="topiclist">
+				<li class="header">
+					<dl class="row-item">
+						<dt><div class="list-inner">{L_STATISTICS}</div></dt>
+					</dl>
+				</li>
+			</ul>
+			<ul class="topiclist forums"> 
+					<li class="row">
+				<dt title="{L_STATISTICS}">
+					<div class="list-inner2">
+						<dl class="row-item" style="background-image: url({T_THEME_PATH}/images/stats.gif); background-repeat: no-repeat; padding-left: 50px;">
 		<p>
 			<!-- EVENT index_body_block_stats_prepend -->
-			{TOTAL_POSTS} &bull; {TOTAL_TOPICS} &bull; {TOTAL_USERS} &bull; {NEWEST_USER}
+			{TOTAL_POSTS} &bull; {TOTAL_TOPICS} &bull; {TOTAL_USERS} <br /> {NEWEST_USER}
 			<!-- EVENT index_body_block_stats_append -->
 		</p>
-	</div>
+					</div>
+					</dl>
+				</dt>
+					</li>
+			</ul>
+		</div>
+</div>
 <!-- ENDIF -->
 
 <!-- EVENT index_body_stat_blocks_after -->
