--- a/rockn_roll/theme/stylesheet.css
+++ b/rockn_roll/theme/stylesheet.css
@@ -104,6 +104,16 @@ hr.dashed {
 	background-color: #E7E8EA;
 }
 
+ul.topiclist2 dt .list-inner2 {
+    margin-right: 95%;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+ul {
+    list-style-type: none;
+}
+
 ul.forums, ul.topics {
 	background-color: #EEF5F9;
 }
@@ -483,63 +493,6 @@ a.topictitle:active {
 .jumpbox-sub-link:hover {
 	background-color: #ACAC90;
 }
-
-/*
-.button {
-	border-color: #888686;
-	background-color: #888686;
-	background-image: -moz-linear-gradient(top, #888686, #FFFFFF);
-	background-image: -webkit-linear-gradient(top, #888686, #FFFFFF);
-	background-image: -o-linear-gradient(top, #888686, #FFFFFF);
-	background-image: linear-gradient(to bottom, #888686, #FFFFFF);
-    font-family: 'BebasNeueRegular','Arial','Helvetica',sans-serif;
-	font-weight: bold;
-	height: auto;
-	line-height: 18px;
-	text-transform: uppercase;
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#888686', EndColorStr='#FFFFFF')";
-	box-shadow: 0 0 0 1px #888686 inset;
-	-webkit-box-shadow: 0 0 0 1px #888686 inset;
-	transition: all 0.2s;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	color: #000000;
-}
-
-.dropdown-select {
-	color: #536482;
-}
-
-.button:hover, .dropdown-visible .dropdown-select, .nojs .dropdown-container:hover .dropdown-select {
-	border-color: #888686;
-	background-image: -moz-linear-gradient(top, #FFFFFF, #888686);
-	background-image: -webkit-linear-gradient(top, #FFFFFF, #888686);
-	background-image: -o-linear-gradient(top, #FFFFFF, #888686);
-	background-image: linear-gradient(to bottom, #FFFFFF, #888686);
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#FFFFFF', EndColorStr='#888686')";
-	text-shadow: 1px 1px 0 #FFFFFF, -1px -1px 0 #888686, -1px -1px 0 rgba(188, 42, 77, 0.2);
-}
-
-.dropdown-select:after	{ border-color: #888686; }
-.dropdown-select:hover	{ border-color: #888686; }
-
-.dropdown-visible .dropdown-select, .dropdown-visible .dropdown-select:hover, .nojs .dropdown-container:hover .dropdown-select {
-	border-color: #888686;
-	color: #105289;
-}
-
-.contact-icons a	{ border-color: #DCDCDC; }
-.contact-icons a:hover	{ background-color: #888686; }
-
-.btn-toolbar .btn-group, .btn-toolbar .input-group {
-    	float: left;
-}
-.btn-group, .btn-group-vertical {
-    	position: relative;
-    	display: inline-block;
-    	vertical-align: middle;
-}
-*/
 
 /* Forum icons & Topic icons */
 
