--- a/rockn_roll/template/overall_footer.html
+++ b/rockn_roll/template/overall_footer.html
@@ -9,7 +9,7 @@
 	<div class="copyright">
 		<!-- EVENT overall_footer_copyright_prepend -->
 		<p class="footer-row">
-			<span class="footer-copyright">{{ CREDIT_LINE }}<br />Style <a href="http://www.suportephpbb.com.br"><strong>Rock'n Roll</strong></a> ported 3.2 by <a href="http://www.phpbb-es.com"><strong>phpBB Spain</strong></a></span>
+			<span class="footer-copyright">{{ CREDIT_LINE }}<br />Style <a href="http://www.suportephpbb.com.br"><strong>Rock'n Roll</strong></a> ported 3.2 by <a href="https://www.phpbb-es.com"><strong>phpBB Spain</strong></a></span>
 		</p>
 		<!-- IF TRANSLATION_INFO -->
 		<p class="footer-row">
