--- a/rockn_roll/template/overall_header.html
+++ b/rockn_roll/template/overall_header.html
@@ -27,7 +27,7 @@
 	Based on style:		prosilver (the default phpBB 3.2.x style)
 	Original author:	Tom Beddard ( http://www.subblue.com/ )
 	Modified by:	  	Vinny ( http://www.suportephpbb.com.br )
-	Ported by:			phpBB Spain ( http://www.phpbb-es.com )
+	Ported by:			phpBB Spain ( https://www.phpbb-es.com )
 -->
 
 <!-- IF S_ALLOW_CDN -->
