--- a/rockn_roll/template/simple_footer.html
+++ b/rockn_roll/template/simple_footer.html
@@ -2,7 +2,7 @@
 
 	<div class="copyright" role="contentinfo">{CREDIT_LINE}
 		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
-		<br />Style <a href="http://www.suportephpbb.com.br"><strong>Rock'n Roll</strong></a> ported 3.2 by <a href="http://www.phpbb-es.com"><strong>phpBB Spain</strong></a>
+		<br />Style <a href="http://www.suportephpbb.com.br"><strong>Rock'n Roll</strong></a> ported 3.2 by <a href="https://www.phpbb-es.com"><strong>phpBB Spain</strong></a>
 		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 	</div>
 
