--- a/rockn_roll/template/simple_footer.html
+++ b/rockn_roll/template/simple_footer.html
@@ -1,9 +1,22 @@
 	</div>
 
-	<div class="copyright" role="contentinfo">{CREDIT_LINE}
-		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
-		<br />Style <a href="http://www.suportephpbb.com.br"><strong>Rock'n Roll</strong></a> ported 3.2 by <a href="https://www.phpbb-es.com"><strong>phpBB Spain</strong></a>
-		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
+	<div class="copyright" role="contentinfo">
+		<p class="footer-row">
+			<span class="footer-copyright">{{ CREDIT_LINE }}</span>
+		</p>
+		{% if TRANSLATION_INFO %}
+			<p class="footer-row">
+				<span class="footer-copyright">{{ TRANSLATION_INFO }}</span>
+			</p>
+		{% endif %}
+			<p class="footer-row">
+				<span class="footer-copyright">Style <a href="http://www.suportephpbb.com.br"><strong>Rock'n Roll</strong></a> ported 3.2 by <a href="https://www.phpbb-es.com"><strong>phpBB Spain</strong></a></span>
+			</p>
+		{% if DEBUG_OUTPUT %}
+			<p class="footer-row">
+				<span class="footer-info">{{ DEBUG_OUTPUT }}</span>
+			</p>
+		{% endif %}
 	</div>
 
 	<div id="darkenwrapper" class="darkenwrapper" data-ajax-error-title="{L_AJAX_ERROR_TITLE}" data-ajax-error-text="{L_AJAX_ERROR_TEXT}" data-ajax-error-text-abort="{L_AJAX_ERROR_TEXT_ABORT}" data-ajax-error-text-timeout="{L_AJAX_ERROR_TEXT_TIMEOUT}" data-ajax-error-text-parsererror="{L_AJAX_ERROR_TEXT_PARSERERROR}">
